fix sibebar font too large

--- a/src/app/ditti/ditti.component.css
+++ b/src/app/ditti/ditti.component.css
@@ -107,13 +107,13 @@ body {
   margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 15px;
-  font-size: xx-large;
+  font-size: 30px;
 }
 
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-h4{
-  font-size: 30px;
+h2{
+  font-size:30px;
 
 
   font-weight: 600;
